# general_pipeline

./: .gitattributes  .gitignore  .gitlab-ci.yml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  OMEGACONF_MIGRATION_GUIDE.md  README.md  REVIEW_CHANGES.md  REVIEW_ROUND_2_SUMMARY.md  pyproject.toml  s3_aksk.env.example
.gitea/workflows/: docs.yml
doc/ai-changelog/: REGISTRATION_GUIDE.md  REVIEW_ROUND_3_SUMMARY.md  TOML_MIGRATION_GUIDE.md
doc/ai-instructions/: 数据产线Python项目规划-架构文档.md  数据产线架构设计规范文档（Linux-amd64版）.md
docs/: README.md
docs/source/: api_reference.rst  conf.py  getting_started.rst  index.rst  migration_guide.md  registration_guide.md  user_guide.rst
examples/: README.md  pipeline_config_example.yaml  simple_test_example.md
examples/conf/: pipeline.toml  pipeline.yaml
examples/conf/nodes/: node_1_v1.0.toml  node_2_v1.0.toml
examples/conf/operators/: example_operator_1_v1.0.toml  example_operator_2_v2.0.toml
src/general_pipeline/cli/: __init__.py
src/general_pipeline/core/: __init__.py  basic_runner.py  pipeline_executor.py  project_initiator.py  resource_monitor.py
src/general_pipeline/models/: env_config.py  node_config.py  operator_config.py  pipeline_config.py
src/general_pipeline/utils/: __init__.py  codec.py  config_loader.py  exceptions.py  log_utils.py  path_utils.py  s3_utils.py  subprocess_utils.py
