[project]
authors = [{name = "liuzhen19", email = "liuzhen19@xiaomi.com"}]
dependencies = []
name = "general_pipeline"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
index-url = "https://pkgs.d.xiaomi.net/artifactory/api/pypi/pypi-virtual/simple"


[tool.pixi.pypi-dependencies]
general_pipeline = { path = ".", editable = true }

[tool.pixi.tasks]
