[project]
authors = [{name = "liuzhen19", email = "liuzhen19@xiaomi.com"}]
dependencies = [
    "toml>=0.10.0",
    "loguru>=0.7.2",
    "pydantic>=2.0.0",
    "psutil>=5.9.8",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "GitPython>=3.1.0",
    "rootutils>=1.0.0",
]
name = "general_pipeline"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
pipeline-cli = "general_pipeline.cli:cli"
pipeline-validate = "general_pipeline.cli:validate_cmd"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-options]
index-url = "https://pkgs.d.xiaomi.net/artifactory/api/pypi/pypi-virtual/simple"


[tool.pixi.pypi-dependencies]
general_pipeline = { path = ".", editable = true }

[tool.pixi.tasks]
