[project]
authors = [{name = "liuzhen19", email = "liuzhen19@xiaomi.com"}]
dependencies = [
    "omegaconf>=2.3.0",
    "loguru>=0.7.2",
    "pydantic>=2.0.0",
    "psutil>=5.9.8",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "GitPython>=3.1.0",
    "rootutils>=1.0.0",
    "python-dotenv>=1.0.0",
]
name = "general_pipeline"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
pipeline-cli = "general_pipeline.cli:cli"
pipeline-validate = "general_pipeline.cli:validate_cmd"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64","osx-arm64"]



[tool.pixi.pypi-dependencies]
general_pipeline = { path = ".", editable = true }

[tool.pixi.tasks]
# make docs
make-docs = { command = "cd docs && make html", description = "Build the documentation.", environment = "docs"}

[tool.pixi.feature.docs.dependencies]
sphinx = "*"
sphinx-rtd-theme = "*"
myst-parser = "*"

[tool.pixi.environments]
docs = { features = ["docs"] }